--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -12,14 +12,16 @@
 
     <div class="top-banner">
       <div class="container">
-        <div class="small-bold-text banner-text"> New to usability Hub: open and closed card sorting</div>
+        <div class="small-bold-text banner-text" style="color: black;"> CodSoft : Create Landing Page </div>
 
       </div>
     </div>
+       <!-- navbar -->
     <nav>
       <div class="container main-nav flex">
         <a href="#" class="company-logo">
-          <img src="./assets/asset 0.png" alt="company logo">
+          <!-- <img src="./assets/asset 0.png" alt="company logo"> -->
+          <h2>Madhukar kumar</h2>
         </a>
         <div class="nav-links">
           <ul class="flex">
@@ -27,14 +29,25 @@
             <li><a href="#" class="hover-link">Customer</a></li>
             <li><a href="#" class="hover-link">Pricing</a></li>
             <li><a href="#" class="hover-link">Resources</a></li>
-            <li><a href="#" class="hover-link">Sign in</a></li>
-            <li><a href="#" class="hover-link">Sign up</a></li>
+            <li><a href="#" class="hover-link secondry-btn">Sign in</a></li>
+            <li><a href="#" class="hover-link primary-btn">Sign up</a></li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <header></header>
+    <header>
+      <div class="container header-section flex">
+        <div class="header-left">
+          <h1>Landing Page</h1>
+          <p>Unleash your creativity with our innovative tools and elevate your projects to new heights. Join us on a journey of endless possibilities in the world of design and innovation.</p>
+          <a href="#" class="primary-btn get-started-btn">Get Started</a>
+        </div>
+        <div class="header-right">
+          <img src="./assets/asset 1.jpeg" alt="hero img">
+        </div>
+      </div>
+    </header>
 
     <section class="companies-section"></section>
 
