--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -49,9 +49,67 @@
       </div>
     </header>
 
-    <section class="companies-section"></section>
+    <section class="companies-section">
+      <div class="container">
+        <div class="small-bold-text companies-header">The word's best companies </div>
+        <div class="logos flex">
+          <img class="logo" src="./assets/asset 2.png" alt="">
+          <img class="logo" src="./assets/asset 3.png" alt="">
+          <img class="logo" src="./assets/asset 4.png" alt="">
+          <img class="logo" src="./assets/asset 5.png" alt="">
+          <img class="logo" src="./assets/asset 6.png" alt="">
+          <img class="logo" src="./assets/asset 7.svg" alt="">
+          <img class="logo" src="./assets/asset 8.png" alt="">
+        </div>
+      </div>
+    </section>
 
-    <section class="features-section"></section>
+    <section class="features-section">
+      <div class="container">
+        <div class="features-header">
+          <h2>Your users research Swiss Army Knife</h2>
+          <a href="#" class="secondry-btn">See all features <i class="fa-sharp fa-solid fa-right-long"></i></a>
+        </div>
+        <div class="faetures-area flex">
+          <div class="features-card flex">
+            <img src="./assets/asset 9.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information</p>
+            <a href="#" class="secondry-btn">Learn More<i class="fa-sharp fa-solid fa-right-long"></i></a>
+          </div>
+          <div class="features-card flex">
+            <img src="./assets/asset 10.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information</p>
+            <a href="#" class="secondry-btn">Learn More<i class="fa-sharp fa-solid fa-right-long"></i></a>
+          </div>
+          <div class="features-card flex">
+            <img src="./assets/asset 11.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information</p>
+            <a href="#" class="secondry-btn">Learn More<i class="fa-sharp fa-solid fa-right-long"></i></a>
+          </div>
+          <div class="features-card flex">
+            <img src="./assets/asset 12.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information</p>
+            <a href="#" class="secondry-btn">Learn More<i class="fa-sharp fa-solid fa-right-long"></i></a>
+          </div>
+          <div class="features-card flex">
+            <img src="./assets/asset 13.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information</p>
+            <a href="#" class="secondry-btn">Learn More<i class="fa-sharp fa-solid fa-right-long"></i></a>
+          </div>
+          <div class="features-card flex">
+            <img src="./assets/asset 14.svg" alt="">
+            <h3>Card Sorting</h3>
+            <p>Discover how people group and label information</p>
+            <a href="#" class="secondry-btn">Learn More<i class="fa-sharp fa-solid fa-right-long"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="big-feature-section"></section>
     <section class="big-feature-section"></section>
