--- a/LANDING PAGE/index.html
+++ b/LANDING PAGE/index.html
@@ -111,17 +111,107 @@
       </div>
     </section>
 
-    <section class="big-feature-section"></section>
-    <section class="big-feature-section"></section>
-    <section class="big-feature-section"></section>
+    <section class="big-feature-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-img">
+          <img src="./assets/asset 15.png" alt="">
+        </div>
+        <div class="feature-desc flex">
+          <h4>Effortless validation</h4>
+          <h3>Design Professionals</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam placeat nesciunt reprehenderit mollitia. Molestias, nobis.</p>
+        </div>
+      </div>
+    </section>
 
-    <section class="examples-section"></section>
+    <section class="big-feature-section">
+      <div class="container flex big-feature-container" style="flex-direction: row-reverse;">
+        <div class="feature-img">
+          <img src="./assets/asset 20.png" alt="">
+        </div>
+        <div class="feature-desc flex">
+          <h4>Effortless validation</h4>
+          <h3>Design Professionals</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam placeat nesciunt reprehenderit mollitia. Molestias, nobis.</p>
+        </div>
+      </div>
+    </section>
 
-    <section class="cta-section"></section>
+    <section class="big-feature-section">
+      <div class="container flex big-feature-container">
+        <div class="feature-img">
+          <img src="./assets/asset 21.png" alt="">
+        </div>
+        <div class="feature-desc flex">
+          <h4>Effortless validation</h4>
+          <h3>Design Professionals</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam placeat nesciunt reprehenderit mollitia. Molestias, nobis.</p>
+        </div>
+      </div>
+    </section>
 
-    <footer></footer>
+    <section class="examples-section">
+      <div class="container">
+        <div class="examples-header">
+          <h2>One platform, endless possibilities</h2>
+          <a href="#" class="secondry-btn">See more Examples <i class="fa-sharp fa-solid fa-right-long"></i></a>
+        </div>
+      </div>
+    </section>
 
-    <div class="sub-footer"></div>
+    <section class="cta-section">
+      <div class="container flex cta-section-container">
+        <h2>Start testing today</h2>
+        <p>Take the guesswork out of decisions</p>
+        <a href="#" class="primary-btn">Get Started</a>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container flex footer-container">
+        <a href="#" class="company-log">
+          <h2>Madhukar kumar</h2>
+        </a>
+        <div class="link-column flex">
+          <h4>Products</h4>
+          <a href="#" class="hover-link">Overview</a>
+          <a href="#" class="hover-link">Pricing</a>
+          <a href="#" class="hover-link">Usability</a>
+          <a href="#" class="hover-link">Customers page</a>
+          <a href="#" class="hover-link">Status page</a>
+        </div>
+
+        <div class="link-column flex">
+          <h4>Methodology</h4>
+          <a href="#" class="hover-link">Overview</a>
+          <a href="#" class="hover-link">Pricing</a>
+          <a href="#" class="hover-link">Usability</a>
+          <a href="#" class="hover-link">Customers page</a>
+          <a href="#" class="hover-link">Status page</a>
+        </div>
+
+        <div class="link-column flex">
+          <h4>Resources</h4>
+          <a href="#" class="hover-link">Overview</a>
+          <a href="#" class="hover-link">Pricing</a>
+          <a href="#" class="hover-link">Usability</a>
+          <a href="#" class="hover-link">Customers page</a>
+          <a href="#" class="hover-link">Status page</a>
+        </div>
+        
+      </div>
+    </footer>
+
+    <div class="sub-footer">
+      <div class="container flex subfooter-container">
+        <a href="#" class="hover-link">Privacy policy</a>
+        <a href="#" class="hover-link">Term & Condition</a>
+        <a href="#" class="hover-link">Security Information</a>
+        <a href="#" class="hover-link"><img src="./assets/asset 24.png" alt="fb"></a>
+        <a href="#" class="hover-link"><img src="./assets/asset 25.png" alt="fb"></a>
+        <a href="#" class="hover-link"><img src="./assets/asset 26.png" alt="fb"></a>
+      </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/c1fc3d2826.js" crossorigin="anonymous"></script>
 </body>
