--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -77,3 +77,74 @@
       }
     </style>
   </head>
+
+  <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+        <i class="fas fa-chevron-up" id="page_top"></i>
+    </button>
+
+    <!-- Start Header Section -->
+
+    <header class="st-site-header st-style1 st-sticky-header">
+        <div class="st-main-header">
+            <div class="container">
+              <div class="st-main-header-in">
+                <div class="st-main-header-left">
+                  <a href="#home" class="st-site-branding" style="font-size: 18px"
+                    >Avnish Kumar</a
+                  >
+                </div>
+                <div class="st-main-header-right">
+                  <div class="st-nav">
+                    <ul class="st-nav-list st-onepage-nav">
+                      <li>
+                        <a href="#homes" id="home" class="st-smooth-move">Home</a>
+                      </li>
+
+                      <li>
+                        <a
+                          href="#abouts"
+                          id="about"
+                          class="st-smooth-move about section"
+                          >About</a
+                        >
+                      </li>
+
+                      <li>
+                        <a href="#skill" id="skills" class="st-smooth-move"
+                          >Skills</a
+                        >
+                      </li>
+
+                      <li>
+                        <a href="#project" id="projects" class="st-smooth-move"
+                          >Project</a
+                        >
+                      </li>
+
+                      <li>
+                        <a href="#contacts" id="contact" class="st-smooth-move"
+                          >Contact</a
+                        >
+                      </li>
+                      
+                      <li id="resume-button-1">
+                        <a
+                          href="./Avnish_Kumar_Resume.pdf"
+                          target="_blank"
+                          download="Avnish_Kumar_Resume.pdf"
+                          class="st-smooth-move nav-link resume"
+                          id="resume-link-1"
+                          >Resume</a
+                        >
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+    </header>
+  </body>
+</html>
