--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -91,7 +91,7 @@
               <div class="st-main-header-in">
                 <div class="st-main-header-left">
                   <a href="#home" class="st-site-branding" style="font-size: 18px"
-                    >Avnish Kumar</a
+                    >Madhukar Kumar</a
                   >
                 </div>
                 <div class="st-main-header-right">
@@ -127,10 +127,10 @@
                           >Contact</a
                         >
                       </li>
-                      
+
                       <li id="resume-button-1">
                         <a
-                          href="./Avnish_Kumar_Resume.pdf"
+                          href="./Madhukar_Kumar_Resume.pdf"
                           target="_blank"
                           download="Avnish_Kumar_Resume.pdf"
                           class="st-smooth-move nav-link resume"
@@ -146,5 +146,69 @@
             </div>
         </div>
     </header>
+
+    <!-- Start Hero Seciton -->
+
+    <section>
+        <div class="container">
+            <div class="st-hero-text">
+
+                <div class="st-author">
+                    <img class="home-img" src="img/background/yellow.jpg" alt="" />
+                </div>
+                <h1>Hi, I am <span id="myname">Madhukar Kumar</span></h1>
+                <div>
+                    <p>
+                        I am a frontend web developer. I can provide clean code and pixel
+                        perfect design.<br />
+                        I also make website more & more interactive with web animations.
+                    </p>
+                </div>
+
+                <div class="st-hero-social-links">
+                    <a
+                      target="_blank"
+                      href="https://www.linkedin.com/in/madhukarkr2468/"
+                      class="st-social-btn"
+                      id="contact-linkedin"
+                    >
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+
+                    <a
+                      target="_blank"
+                      href="https://twitter.com/madhukarkr2468/"
+                      class="st-social-btn"
+                    >
+                      <i class="fab fa-twitter"></i>
+                    </a>
+
+                    <a
+                      target="_blank"
+                      href="https://github.com/Madhukarkrgithub"
+                      class="st-social-btn"
+                      id="contact-github"
+                    >
+                     <i class="fab fa-github"></i>
+                    </a>
+
+                    <div id="resume-button-2">
+                        <a 
+                          href="Madhukar-Kumar-Resume.pdf"
+                          target="_blank"
+                          download="Madhukar-Kumar-Resume.pdf"
+                          class="st-btn st-style1 st-color1"
+                          id="resume-link-2"
+                        >
+                          My Resume
+                        </a>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+        
+    </section>
   </body>
 </html>
