--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -149,7 +149,10 @@
 
     <!-- Start Hero Seciton -->
 
-    <section>
+    <section
+      id="homes"
+      class="st-hero st-style2 st-bg st-dynamic-bg nav-link home"
+    >
         <div class="container">
             <div class="st-hero-text">
 
@@ -208,7 +211,75 @@
 
             </div>
         </div>
-        
     </section>
+
+    <!-- Start about Section -->
+
+    <section id="abouts" class="st-about-wrap nav-link about">
+        <div class="st-height-b100 st-height-lg-b80"></div>
+        <div class="container">
+          <div class="st-section-heading st-style1">
+            <h4 class="st-section-heading-title">ABOUT ME</h4>
+          </div>
+          <div class="st-height-b25 st-height-lg-b25"></div>
+        </div>
+  
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 wow fadeInLeft">
+              <div class="st-about-img-wrap">
+                <div>
+                  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                  <lottie-player
+                    src="https://assets10.lottiefiles.com/packages/lf20_iorpbol0.json"
+                    background=""
+                    speed="1"
+                    style="width: 410px; height: 400px"
+                    loop
+                    autoplay
+                  ></lottie-player>
+                </div>
+              </div>
+              <div class="st-height-b0 st-height-lg-b30"></div>
+            </div>
+            <div class="col-lg-6">
+              <div class="st-vertical-middle">
+                <div class="st-vertical-middle-in">
+                  <div class="st-text-block st-style1">
+                    <h2 id="user-detail-name" class="st-text-block-title">
+                      I'm Madhukar Kumar
+                    </h2>
+                    <h4 class="st-text-block-subtitle">
+                      Full Stack Web Developer
+                    </h4>
+                    <div class="st-text-block-text">
+                      <p id="user-detail-intro">
+                        Aspiring and self-motivated Full Stack Web Developer
+                        proficiency to create user friendly and ready to use web
+                        application. Looking forward to an opportunity to deploy
+                        skills and contribute towards a success of an
+                        organization.
+                      </p>
+                    </div>
+                    <ul class="st-text-block-details st-mp0">
+                      <li>
+                        <span>Phone</span> :
+                        <span id="contact-phone">7079493196</span>
+                      </li>
+                      <li>
+                        <span>Email</span> :
+                        <span id="contact-email">madhukarkumar2468@gmail.com</span>
+                      </li>
+                      <li><span>From</span> : <span>Ara, Bihar</span></li>
+                      <li><span>Language</span> : <span>English, Hindi</span></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
   </body>
 </html>
