--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -279,7 +279,83 @@
             </div>
           </div>
         </div>
+    </section>
+
+    <!-- Start Skill Seciton -->
+
+    <section id="skill" class="st-dark-bg nav-link skills">
+        <div class="st-height-b100 st-height-lg-b80"></div>
+  
+        <div class="container">
+          <div class="st-section-heading st-style1">
+            <h4 class="st-section-heading-title">MY SKILLS</h4>
+          </div>
+          <div class="st-height-b25 st-height-lg-b25"></div>
+        </div>
+  
+        <div class="container p-5 skill-back skills-card">
+          <div class="row justify-content-center relayout">
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-html.png" />
+              <p class="skills-card-name">HTML</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-css.png" />
+              <p class="skills-card-name">CSS</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-js.png" />
+              <p class="skills-card-name">Javascript</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-bt.png" />
+              <p class="skills-card-name">Bootstrap</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-react.png" />
+              <p class="skills-card-name">React JS</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-redux.png" />
+              <p class="skills-card-name">Redux</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-ts.png" />
+              <p class="skills-card-name">Typescript</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-ex.png" />
+              <p class="skills-card-name">Express</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-mg.png" />
+              <p class="skills-card-name">MongoDB</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-node.png" />
+              <p class="skills-card-name">NodeJS</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-docker.png" />
+              <p class="skills-card-name">Docker</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-papi.png" />
+              <p class="skills-card-name">Postman API</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-figma.png" />
+              <p class="skills-card-name">Figma</p>
+            </div>
+            <div class="skills-sec">
+              <img class="skills-card-img" src="./img/icon/madhu-lab.png" />
+              <p class="skills-card-name">GitLab</p>
+            </div>
+          </div>
+        </div>
       </section>
+
+
 
   </body>
 </html>
