--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -355,7 +355,279 @@
         </div>
       </section>
 
+      <!-- Start project secition -->
+      <br/>
+      <section id="project" class="nav-link projects">
+        <div class="st-height-b100 st-height-lg-b80"></div>
+      <div class="container">
+        <div class="st-section-heading st-style1">
+          <h4 class="st-section-heading-title">PROJECT</h4>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 project-card">
+            <div class="st-iconbox st-style1">
+              <div class="st-iconbox-ico">
+                <img
+                  class="img"
+                  src="./img/background/vender-app-img.png"
+                  alt=""
+                />
+              </div>
+              <h2 class="st-iconbox-title project-title">Multi Vender App</h2>
+              <br />
+              <div class="st-iconbox-text">
+                <p class="project-description">
+                  It's my major project where I've used MERN stack based
+                  shopping website with multi-vendor functionality, an
+                  integrated payment gateway, and chat feature. It included
+                  separate user, vendor, and admin dashboards
+                </p>
+                <br />
+                <br />
+                <p id="project-tech-stack_head">
+                  <b class="project-tech-stack">Tech Stack: </b> ReactJS, Redux,
+                  MongoDB, Express, NodeJS, tailwindcss, web-socket
+                </p>
+              </div>
 
+              <div id="hosting_div">
+                <a
+                  href="https://vender-app-frontend-dwr3.vercel.app/"
+                  target="_blank"
+                  id="live"
+                  class="st-btn st-style1 st-color1 project-deployed-link"
+                  >LIVE</a
+                >
+                <a
+                  href="https://github.com/avnishsingh0/ecom-vender-app"
+                  target="_blank"
+                  id="host"
+                  class="st-btn st-style1 st-color1 project-github-link"
+                  >HOST</a
+                >
+              </div>
+            </div>
+            <div class="st-height-b0 st-height-lg-b30"></div>
+          </div>
+          <div class="col-lg-4 col-md-6 project-card">
+            <div class="st-iconbox st-style1">
+              <div class="st-iconbox-ico">
+                <img class="img" src="./img/background/lens.png" alt="" />
+              </div>
+              <h2 class="st-iconbox-title project-title">Lenskart Clone</h2>
+              <br />
+              <div class="st-iconbox-text">
+                <p class="project-description">
+                  This project is about building an online E-commerce Eyeglass
+                  web application showing the functionalities of an e-commerce
+                  glass and lense website like sorting & search food, add to cart,
+                  trending items etc.
+                </p>
+                <br />
+                <br />
+                <p id="project-tech-stack_head">
+                  <b class="project-tech-stack">Tech Stack: </b> ReactJS, Redux,
+                  MongoDB, Express, NodeJS, ChakraUI, CSS
+                </p>
+              </div>
+
+              <div id="hosting_div">
+                <a
+                  href="https://eyescare.vercel.app/"
+                  target="_blank"
+                  id="live"
+                  class="st-btn st-style1 st-color1 project-deployed-link"
+                  >LIVE</a
+                >
+                <a
+                  href="https://github.com/avnishsingh0/silent-toes-7433"
+                  target="_blank"
+                  id="host"
+                  class="st-btn st-style1 st-color1 project-github-link"
+                  >HOST</a
+                >
+              </div>
+            </div>
+            <div class="st-height-b0 st-height-lg-b30"></div>
+          </div>
+          <div class="col-lg-4 col-md-6 project-card">
+            <div class="st-iconbox st-style1">
+              <div class="st-iconbox-ico">
+                <img class="img" src="./img/background/Add.png" alt="" />
+              </div>
+              <!-- <h2 class="st-iconbox-title project-title">Myntra Clone</h2> -->
+              <p class="st-iconbox-title project-title">Myntra Clone</p>
+              <br />
+              <div class="st-iconbox-text">
+                <p class="project-description">
+                  This project is about building an online E-commerce web
+                  application with backend integration showing the
+                  functionalities of an e-commerce website like filtering the
+                  products, add to cart, wishlist etc
+                </p>
+                <br />
+                <br />
+                <p id="project-tech-stack_head">
+                  <b class="project-tech-stack">Tech Stack: </b> ReactJS, Redux,
+                  MongoDB, Express, NodeJS, ChakraUI, CSS
+                </p>
+              </div>
+              <div id="hosting_div">
+                <a
+                  href="https://myntra-clones.vercel.app"
+                  id="live"
+                  target="_blank"
+                  class="st-btn st-style1 st-color1 project-deployed-link"
+                  >LIVE</a
+                >
+                <a
+                  href="https://github.com/avnishsingh0/ecom-project"
+                  target="_blank"
+                  id="host"
+                  class="st-btn st-style1 st-color1 project-github-link"
+                  >HOST</a
+                >
+              </div>
+            </div>
+            <div class="st-height-b0 st-height-lg-b30"></div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 project-card">
+            <div class="st-iconbox st-style1">
+              <div class="st-iconbox-ico">
+                <img
+                  class="img"
+                  src="https://mohit-portfolio.vercel.app/assets/adidas.03048389.jpg"
+                  alt=""
+                />
+              </div>
+
+              <h2 class="st-iconbox-title project-title">Cartlane Clone</h2>
+              <br />
+              <div class="st-iconbox-text">
+                <p class="project-description">
+                  This project is about building an online E-commerce Jewellery
+                  web application showing the functionalities of an e-commerce
+                  Jewellery website like sorting & search food, add to cart,
+                  trending items etc.
+                </p>
+                <br />
+                <br />
+                <p id="project-tech-stack_head">
+                  <b class="project-tech-stack">Tech Stack: </b> ReactJS,
+                  Redux,Bootstrap, Rest API, ChakraUI, CSS
+                </p>
+              </div>
+
+              <div id="hosting_div">
+                <a
+                  href="https://celestial-bubble-1320-cjzn.vercel.app/"
+                  target="_blank"
+                  id="live"
+                  class="st-btn st-style1 st-color1 project-deployed-link"
+                  >LIVE</a
+                >
+                <a
+                  href="https://github.com/avnishsingh0/new-bucket-3441"
+                  target="_blank"
+                  id="host"
+                  class="st-btn st-style1 st-color1 project-github-link"
+                  >HOST</a
+                >
+              </div>
+            </div>
+            <div class="st-height-b0 st-height-lg-b30"></div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 project-card" id="snap">
+            <div class="st-iconbox st-style1">
+              <div class="st-iconbox-ico">
+                <img
+                  class="img"
+                  src="./img//background/snapdeal-img.jpg"
+                  alt=""
+                />
+              </div>
+              <h2 class="st-iconbox-title project-title">Sugar Cosmetics</h2>
+              <br />
+              <div class="st-iconbox-text">
+                <p class="project-description">
+                  This website is a clone of “Sugar Cosmetics” which is an
+                  e-commerce store & here I implemented some functionalities
+                  product sorting & filtering, add to cart, coupon discount etc.
+                </p>
+                <br />
+                <br />
+                <p id="project-tech-stack_head">
+                  <b class="project-tech-stack">Tech Stack: </b> ReactJS, Redux,
+                  MongoDB, Express, NodeJS, ChakraUI, CSS
+                </p>
+              </div>
+              <div id="hosting_div">
+                <a
+                  href="https://masai-cosmetics.netlify.app/"
+                  target="_blank"
+                  id="live"
+                  class="st-btn st-style1 st-color1 project-deployed-link"
+                  >LIVE</a
+                >
+                <a
+                  href="https://github.com/avnishsingh0/sugarcosmetics-clone"
+                  target="_blank"
+                  id="host"
+                  class="st-btn st-style1 st-color1 project-github-link"
+                  >HOST</a
+                >
+              </div>
+            </div>
+            <div class="st-height-b0 st-height-lg-b30"></div>
+          </div>
+          <div class="col-lg-4 col-md-6 project-card" id="snap">
+            <div class="st-iconbox st-style1">
+              <div class="st-iconbox-ico">
+                <img class="img" src="./img/background/portpc.jpg" alt="" />
+              </div>
+              <h2 class="st-iconbox-title project-title">Portfolio</h2>
+              <br />
+              <div class="st-iconbox-text">
+                <p class="project-description">
+                  This is my new portfolio, showcasing my skills and projects,
+                  which I recently developed using React, JavaScript, CSS, and
+                  Chakra UI. With careful consideration,ensuring the protection
+                  of the code and preserving its uniqueness.
+                </p>
+                <br />
+                <br />
+                <p id="project-tech-stack_head">
+                  <b class="project-tech-stack">Tech Stack: </b> HTML5, CSS3,
+                  JavaScript, Bootstrap, jquery, firebase
+                </p>
+              </div>
+              <div id="hosting_div">
+                <a
+                  href="https://masai-cosmetics.netlify.app/"
+                  target="_blank"
+                  id="live"
+                  class="st-btn st-style1 st-color1 project-deployed-link"
+                  >LIVE</a
+                >
+                <a
+                  href="https://github.com/avnishsingh0/sugarcosmetics-clone"
+                  target="_blank"
+                  id="host"
+                  class="st-btn st-style1 st-color1 project-github-link"
+                  >HOST</a
+                >
+              </div>
+            </div>
+            <div class="st-height-b0 st-height-lg-b30"></div>
+          </div>
+        </div>
+      </div>
+      <div class="st-height-b100 st-height-lg-b80"></div>
+      </section>
 
   </body>
 </html>
