--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -626,8 +626,51 @@
           </div>
         </div>
       </div>
-      <div class="st-height-b100 st-height-lg-b80"></div>
-      </section>
+       <div class="st-height-b100 st-height-lg-b80"></div>
+     </section>
+
+     <!-- Github Stats -->
+     <div class="st-section-heading st-style1">
+      <h2 class="st-section-heading-title">Github Stats</h2>
+    </div>
+    <div class="container">
+      <div class="calendar mt-1 mb-5 react-activity-calendar">
+        Loading the data just for you.
+      </div>
+    </div>
+    
+     <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="st-section-heading st-style1">
+            <!-- <h2 class="title">Github Stats</h2> -->
+            <br />
+            <div>
+              <img
+                id="github-streak-stats"
+                src="https://github-readme-streak-stats.herokuapp.com?user=Madhukarkrgithub"
+                alt="Madhukar"
+              />
+            </div>
+            <br />
+            <div>
+              <img
+                id="github-top-langs"
+                src="https://github-readme-stats.vercel.app/api/top-langs/?username=Madhukarkrgithub&theme=react&border_radius=4.6&hide_border=true&layout=compact&show_icons=true"
+              />
+            </div>
+            <br />
+            <div>
+              <img
+                id="github-stats-card"
+                src="https://github-readme-stats.vercel.app/api?username=Madhukarkrgithub&theme=react&border_radius=4.6&show_icons=true&count_private=true&hide_border=true&show_icons=true"
+                alt="Madhukar"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
