--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -638,7 +638,7 @@
         Loading the data just for you.
       </div>
     </div>
-    
+
      <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -672,5 +672,143 @@
       </div>
     </div>
 
+    <!-- Start Contact Seciton -->
+    <br />
+    <section id="contacts" class="st-dark-bg nav-link contact">
+      <div class="st-height-b100 st-height-lg-b80"></div>
+      <div class="container">
+        <div class="st-section-heading st-style1">
+          <h4 class="st-section-heading-title">CONTACT ME</h4>
+          <!-- <h2 class="st-section-heading-subtitle">CONTACT ME</h2> -->
+        </div>
+        <div class="st-height-b25 st-height-lg-b25"></div>
+      </div>
+
+      <!-- Contact Container -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h3 class="st-contact-title">Just say Hello</h3>
+            <div id="st-alert"></div>
+            <form
+              target="_blank"
+              action="https://formsubmit.co/ea1d21889a214fd92f9cd5c2fcf7cb97"
+              method="POST"
+              class="st-contact-form"
+            >
+              <div class="st-form-field">
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Your Name"
+                  required
+                />
+              </div>
+              <div class="st-form-field">
+                <input
+                  type="text"
+                  name="email"
+                  placeholder="Your Email"
+                  required
+                />
+              </div>
+              <div class="st-form-field">
+                <input
+                  type="text"
+                  name="subject"
+                  placeholder="Your Subject"
+                  required
+                />
+              </div>
+              <div class="st-form-field">
+                <textarea
+                  cols="30"
+                  rows="10"
+                  name="msg"
+                  placeholder="Your Message"
+                  required
+                ></textarea>
+              </div>
+              <button class="st-btn st-style1 st-color1" type="submit">
+                Send message
+              </button>
+            </form>
+          </div>
+          <div class="st-height-b0 st-height-lg-b30"></div>
+
+          <div class="col-lg-6">
+            <div class="st-height-b0 st-height-lg-b40"></div>
+            <h3 class="st-contact-title">Contact Info</h3>
+            <div class="st-contact-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+              ligula nulla tincidunt id faucibus sed suscipit feugiat.
+            </div>
+            <div class="st-contact-info-wrap">
+              <div class="st-single-contact-info">
+                <i class="fas fa-envelope"></i>
+                <div class="st-single-info-details">
+                  <h4>Email</h4>
+                  <a href="#">madhukarkumar2468@gmail.com</a>
+                </div>
+              </div>
+              <div class="st-single-contact-info">
+                <i class="fas fa-phone-alt"></i>
+                <div class="st-single-info-details">
+                  <h4>Phone</h4>
+                  <span>+91 7079493196</span>
+                </div>
+              </div>
+              <div class="st-single-contact-info">
+                <i class="fas fa-map-marker-alt"></i>
+                <div class="st-single-info-details">
+                  <h4>Address</h4>
+                  <span>Ara, Bihar</span>
+                </div>
+              </div>
+
+              <div class="st-social-info">
+                <div class="st-social-text">
+                  Visite my social profile and get connected
+                </div>
+                <div class="st-social-link">
+                  <a
+                    href="https://github.com/Madhukarkrgithub"
+                    class="st-social-btn"
+                    target="_blank"
+                  >
+                    <span class="st-social-icon">
+                      <i class="fab fa-github"></i
+                    ></span>
+                    <span class="st-icon-name">Github</span>
+                  </a>
+                  <a
+                    href="https://twitter.com/madhukarkr2468/"
+                    class="st-social-btn"
+                    target="_blank"
+                  >
+                    <span class="st-social-icon"
+                      ><i class="fab fa-twitter"></i
+                    ></span>
+                    <span class="st-icon-name">Twitter</span>
+                  </a>
+                  <a
+                    href="https://www.linkedin.com/in/madhukarkr2468/"
+                    target="_blank"
+                    class="st-social-btn"
+                  >
+                    <span class="st-social-icon"
+                      ><i class="fab fa-linkedin"></i
+                    ></span>
+                    <span class="st-icon-name">LinkedIn</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="st-height-b100 st-height-lg-b80"></div>
+    </section>
   </body>
 </html>
