--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -810,5 +810,81 @@
       </div>
       <div class="st-height-b100 st-height-lg-b80"></div>
     </section>
+
+    <!-- Start Footer Seciton -->
+    <footer>
+      <div class="container">
+        <div class="st-copyright-wrap text-center">
+          <div class="st-copyright-text">
+            © 2021. Designed by Madhukar kumar. All right reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Scripts -->
+
+    <script>
+      let resumebtn1 = document
+        .getElementById("resume-button-1")
+        .addEventListener("click", () => {
+          window.open(
+            "https://drive.google.com/file/d/15awixk1doQqpm2xmTP_Ot7Fb3FoUo9R6/view?usp=sharing",
+            "_blank"
+          );
+        });
+      let resumebtn2 = document
+        .getElementById("resume-button-2")
+        .addEventListener("click", () => {
+          window.open(
+            "https://drive.google.com/file/d/15awixk1doQqpm2xmTP_Ot7Fb3FoUo9R6/view?usp=sharing",
+            "_blank"
+          );
+        });
+    </script>
+    <script
+      data-cfasync="false"
+      src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
+    <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+
+    <script>
+      GitHubCalendar(".calendar", "Madhukarkrgithub");
+      GitHubCalendar(".calendar", "Madhukarkrgithub", { responsive: true });
+      GitHubCalendar(".calendar", "Madhukarkrgithub", {});
+    </script>
+
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      // Get the button
+      let mybutton = document.getElementById("myBtn");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (
+          document.body.scrollTop > 20 ||
+          document.documentElement.scrollTop > 20
+        ) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+
+      // When the user clicks on the button, scroll to the top of the document with smooth scrolling
+      function topFunction() {
+        $("html, body").animate(
+          {
+            scrollTop: 0,
+          },
+          800
+        );
+      }
+    </script>
   </body>
 </html>
