--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -157,7 +157,7 @@
             <div class="st-hero-text">
 
                 <div class="st-author">
-                    <img class="home-img" src="img/background/yellow.jpg" alt="" />
+                    <img class="home-img" src="./img/background/madhukar.jpg" alt="" />
                 </div>
                 <h1>Hi, I am <span id="myname">Madhukar Kumar</span></h1>
                 <div>
