--- a/PORTFOLIO/index.html
+++ b/PORTFOLIO/index.html
@@ -132,7 +132,7 @@
                         <a
                           href="./Madhukar_Kumar_Resume.pdf"
                           target="_blank"
-                          download="Avnish_Kumar_Resume.pdf"
+                          download="Madhukar-Kumar-Resume.pdf"
                           class="st-smooth-move nav-link resume"
                           id="resume-link-1"
                           >Resume</a
